--- a/bentota.html
+++ b/bentota.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Gallery</a></li>
                 <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
-                    <a href="#">Other</a>
+                    <a href="#">Other Hatcheries</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="#">Bentota</a></li>
@@ -47,7 +47,6 @@
             <div class="main-viewport-header-text">
                 <span>Explore</span>
                 <h2>Bentota</h2>
-                <h2>&#9730</h2>
                 <br>
             </div>
             <button class="scroll-btn" onclick="location.href='#bentota-first-id'">
@@ -66,7 +65,7 @@
                 <p>Bentota's pristine beaches are the main attraction for visitors. With their golden sands, clear turquoise waters, and swaying palm trees, these beaches provide an idyllic setting for sunbathing, swimming, and water sports. Whether you want to soak up the sun, try your hand at surfing or jet skiing, or simply take a leisurely stroll along the shore, Bentota's beaches offer a range of activities to suit every traveler's preferences.</p>
             </div>
             <div class="bentota-first-image-container">
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/bentota 1.jpg" alt="">
                 <img src="images/pollution2.jpg" alt="">
             </div>
         </div>
@@ -126,12 +125,12 @@
 
     <section class="bentota-image">
         <div class="bentota-image-container-one">
-            <img class="bentota-image-container-one-img1" src="images/pollution2.jpg" alt="">
-            <img class="bentota-image-container-one-img2" src="images/pollution2.jpg" alt="">
+            <img class="bentota-image-container-one-img1" src="images/bentota 4.jpg" alt="">
+            <img class="bentota-image-container-one-img2" src="images/bentota 2.jpg" alt="">
         </div>
         <div class="bentota-image-container-two">
-            <img class="bentota-image-container-two-img1" src="images/pollution2.jpg" alt="">
-            <img class="bentota-image-container-two-img2" src="images/pollution2.jpg" alt="">
+            <img class="bentota-image-container-two-img1" src="images/bentota 3.jpg" alt="">
+            <img class="bentota-image-container-two-img2" src="images/bentota 5.jpg" alt="">
         </div>
     </section>
 
