--- a/categories.html
+++ b/categories.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Gallery</a></li>
                 <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
-                    <a href="#">Other</a>
+                    <a href="#">Other Hatcheries</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="bentota.html">Bentota</a></li>
@@ -57,9 +57,8 @@
     <section id="main-section-id" class="main-section-1">
         <div class="categories-first-section">
             <div class="categories-first-section-container">
-        
                 <div class="categories-first-section-item">
-                    <img src="images/hikkaduwa2.jpg" alt="">
+                    <img src="images/Green Sea.jpg" alt="">
                     <div class="categories-first-section-item-description">
                         <h2>Name :</h2>
                         <h3>Green Sea Turtle</h3><br>
@@ -70,9 +69,6 @@
                         <h2>Conservation status :</h2>
                         <h3>Endangered (Population decreasing)</h3><br>
                     </div>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.6289007393507!2d80.85284411239084!3d6.0455459285039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae6b4f71b54391d%3A0x6edcdb75d1d6b794!2sRekawa%20Turtle%20Beach!5e0!3m2!1sen!2slk!4v1684136583934!5m2!1sen!2slk" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -84,13 +80,16 @@
                 </p><br>
                 <p>Along the coast of Sri Lanka, particularly in regions such as <strong>Rekawa, Kosgoda, and Pigeon Island</strong>, green sea turtles can be observed in their natural environment. These areas are renowned for their turtle conservation projects and provide a sanctuary for nesting and hatching activities. Every year, female green sea turtles return to these shores, driven by  their strong nesting instincts. Under the cover of darkness, they laboriously dig nests in the sandy beaches and lay their eggs, ensuring the survival of the species for future generations.</p>
             </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.6289007393507!2d80.85284411239084!3d6.0455459285039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae6b4f71b54391d%3A0x6edcdb75d1d6b794!2sRekawa%20Turtle%20Beach!5e0!3m2!1sen!2slk!4v1684136583934!5m2!1sen!2slk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
     <section class="main-section-2">
         <div class="categories-second-section">
             <div class="categories-second-section-item">
-                <img src="images/hikkaduwa2.jpg" alt="">
+                <img src="images/Leatherback.jpg" alt="">
                 <div class="categories-second-section-item-description">
                     <h2>Name :</h2>
                     <h3>Leatherback Sea Turtle</h3><br>
@@ -101,9 +100,6 @@
                     <h2>Conservation status :</h2>
                     <h3>Vulnerable (Population decreasing)</h3><br>
                 </div>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7921.997411568509!2d81.83725476970704!3d6.890756773677834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae5a2f4ef81d57d%3A0x6d2d015283f9ba77!2sPottuvil%20point!5e0!3m2!1sen!2slk!4v1684138056668!5m2!1sen!2slk"  allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <div class="categories-second-section-2">
@@ -119,6 +115,9 @@
                 In addition to Rekawa Beach, other coastal areas such as <strong>Pottuvil Point and Bundala National Park</strong> are known for occasional leatherback sea turtle sightings. These areas offer opportunities for nature enthusiasts and conservationists to witness the remarkable beauty of these ancient creatures in their natural habitat.
                 </p>
             </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7921.997411568509!2d81.83725476970704!3d6.890756773677834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae5a2f4ef81d57d%3A0x6d2d015283f9ba77!2sPottuvil%20point!5e0!3m2!1sen!2slk!4v1684138056668!5m2!1sen!2slk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
@@ -126,7 +125,7 @@
         <div class="categories-third-section">
             <div class="categories-third-section-container">
                 <div class="categories-third-section-item">
-                    <img src="images/hikkaduwa2.jpg" alt="">
+                    <img src="images/Olive Ridley.jpg" alt="">
                     <div class="categories-third-section-item-description">
                         <h2>Name :</h2>
                         <h3>Olive Ridley Sea Turtle</h3><br>
@@ -137,9 +136,6 @@
                         <h2>Conservation status :</h2>
                         <h3>Vulnerable (Population decreasing)</h3><br>
                     </div>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31719.77270393228!2d79.98251407140522!3d6.397662869447293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22eab0662a311%3A0x3f76eca26e608182!2sSea%20Turtle%20Project!5e0!3m2!1sen!2slk!4v1684138707504!5m2!1sen!2slk"  allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -151,13 +147,16 @@
                 </p><br>
                 <p>Olive ridley sea turtles can be found nesting in several locations along the coastal areas of Sri Lanka. <strong>Rekawa Beach</strong>, situated in the southern part of the country, is a prominent nesting site for these magnificent creatures. Other regions such as <strong>Kosgoda, Pottuvil and Bentota</strong> also serve as nesting grounds for olive ridleys. These coastal areas have implemented conservation efforts to protect the nesting sites and ensure the survival of these endangered turtles. Witnessing the nesting rituals of olive ridleys in these picturesque locations is a remarkable experience.</p>
             </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31719.77270393228!2d79.98251407140522!3d6.397662869447293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22eab0662a311%3A0x3f76eca26e608182!2sSea%20Turtle%20Project!5e0!3m2!1sen!2slk!4v1684138707504!5m2!1sen!2slk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
     <section class="main-section-4">
         <div class="categories-fourth-section">
             <div class="categories-fourth-section-item">
-                <img src="images/hikkaduwa2.jpg" alt="">
+                <img src="images/Hawksbill Turtle.jpg" alt="">
                 <div class="categories-fourth-section-item-description">
                     <h2>Name :</h2>
                     <h3>Hawksbill Sea Turtle</h3><br>
@@ -168,9 +167,6 @@
                     <h2>Conservation status :</h2>
                     <h3>Critically Endangered (Population decreasing)</h3><br>
                 </div>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63098.859705664494!2d81.1427127366627!3d8.722025400000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3afbbf9cdb8f4a57%3A0x2f07a90f5ad3d721!2sPigeon%20Island!5e0!3m2!1sen!2slk!4v1684295567009!5m2!1sen!2slk" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <div class="categories-fourth-section-2">
@@ -182,6 +178,9 @@
                 <p>One prominent area to encounter hawksbill turtles is the Pigeon Island National Park. Located off the northeastern coast of Sri Lanka, this protected marine reserve is home to vibrant coral reefs and a flourishing ecosystem. Snorkelers and divers often have the privilege of observing hawksbill turtles gracefully gliding through the crystal-clear waters,
                 feasting on sponges and other marine organisms.<p> 
             </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63098.859705664494!2d81.1427127366627!3d8.722025400000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3afbbf9cdb8f4a57%3A0x2f07a90f5ad3d721!2sPigeon%20Island!5e0!3m2!1sen!2slk!4v1684295567009!5m2!1sen!2slk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
@@ -189,7 +188,7 @@
         <div class="categories-fifth-section">
             <div class="categories-fifth-section-container">
                 <div class="categories-fifth-section-item">
-                    <img src="images/hikkaduwa2.jpg" alt="">
+                    <img src="images/Loggerhead Turtle.jpg" alt="">
                     <div class="categories-fifth-section-item-description">
                         <h2>Name :</h2>
                         <h3>Loggerhead Sea Turtle</h3><br>
@@ -200,9 +199,6 @@
                         <h2>Conservation status :</h2>
                         <h3>(Endangered)</h3><br>
                     </div>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31480.808563005954!2d79.22914867218357!3d9.499938374332487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b01dba613ed086b%3A0xecca11a6a4f0ddc4!2sPalk%20Bay!5e0!3m2!1sen!2slk!4v1684348389856!5m2!1sen!2slk" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -210,16 +206,26 @@
             <div class="categories-fifth-section-description">
                 <h2>Description</h2>
                 <hr>
-                <p> The loggerhead turtle (Caretta caretta) can also be found in the coastal areas in Sri Lanka, adding to the country's rich biodiversity. These captivating creatures, known for their large heads and powerful jaws, can be spotted in several locations along Sri Lanka's coast.
+                <p> The loggerhead turtle (Caretta caretta) can also be found in the coastal areas in Sri Lanka, adding to the country's
+                    rich biodiversity. These captivating creatures, known for their large heads and powerful jaws, can be spotted in
+                    several locations along Sri Lanka's coast.
                 </p><br>
                 <p>
-                    One prominent location where loggerhead turtles can be encountered in Sri Lanka is <strong>the Rekawa Beach</strong>. Situated on the southeastern coast, this pristine stretch of shoreline serves as a vital nesting site for loggerhead turtles. From October to January, female turtles emerge under the moonlight to lay their eggs in the warm sands. Witnessing this remarkable nesting process is an awe-inspiring experience that highlights the importance of conservation efforts to  protect these endangered creatures and their habitats.
+                    One prominent location where loggerhead turtles can be encountered in Sri Lanka is <strong>the Rekawa
+                        Beach</strong>. Situated on the southeastern coast, this pristine stretch of shoreline serves as a vital nesting
+                    site for loggerhead turtles. From October to January, female turtles emerge under the moonlight to lay their eggs in
+                    the warm sands. Witnessing this remarkable nesting process is an awe-inspiring experience that highlights the
+                    importance of conservation efforts to protect these endangered creatures and their habitats.
                 </p><br>
-
                 <p>
-                Another significant site for loggerhead turtles is the <strong>Palk Bay region</strong>, located between Sri Lanka and India. This area is known for its diverse marine ecosystem, and it provides a rich foraging ground for loggerheads. The nutrient-rich waters attract an abundance of prey species, ensuring a steady food supply for the turtles.
+                    Another significant site for loggerhead turtles is the <strong>Palk Bay region</strong>, located between Sri Lanka
+                    and India. This area is known for its diverse marine ecosystem, and it provides a rich foraging ground for
+                    loggerheads. The nutrient-rich waters attract an abundance of prey species, ensuring a steady food supply for the
+                    turtles.
                 </p>
             </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31480.808563005954!2d79.22914867218357!3d9.499938374332487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b01dba613ed086b%3A0xecca11a6a4f0ddc4!2sPalk%20Bay!5e0!3m2!1sen!2slk!4v1684348389856!5m2!1sen!2slk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
