--- a/hikkaduwa.html
+++ b/hikkaduwa.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Gallery</a></li>
                 <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
-                    <a href="#">Other</a>
+                    <a href="#">Other Hatcheries</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="bentota.html">Bentota</a></li>
@@ -47,7 +47,6 @@
             <div class="main-viewport-header-text">
                 <span>Explore</span>
                 <h2>Hikkaduwa</h2>
-                <h2>&#9730</h2>
                 <br>
             </div>
             <button class="scroll-btn" onclick="location.href='#hikkaduwa-first-id'">
@@ -79,7 +78,7 @@
             </div>
         </div>
         <div class="hikkaduwa-first-image-container">
-            <img src="images/marten-bjork-iXed2ZaTobo-unsplash.jpg" alt="">
+            <img src="images/hikkaduwa map.jpg" alt="">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.970218923684!2d80.09515670024217!3d6.134703814025925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae177e2cbcb6ead%3A0xd0adba737d2f45d9!2sHikkaduwa%20Beach!5e0!3m2!1sen!2slk!4v1684643922987!5m2!1sen!2slk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
@@ -94,8 +93,8 @@
             newborn hatchlings into the ocean, a truly awe-inspiring experience that showcases the hatchery's dedication to conservation efforts.</p>
         </div>
         <div class="hikkaduwa-second-image-container">
-            <img class="hikkaduwa-second-image-container-one" src="images/marten-bjork-iXed2ZaTobo-unsplash.jpg" alt="">
-            <img class="hikkaduwa-second-image-container-two" src="images/marten-bjork-iXed2ZaTobo-unsplash.jpg" alt="">
+            <img class="hikkaduwa-second-image-container-one" src="images/turtle1.jpg" alt="">
+            <img class="hikkaduwa-second-image-container-two" src="images/hikkaduwa tur2.png" alt="">
         </div>
     </section>
 
@@ -123,10 +122,10 @@
                         </a>
                     </button>
                 </div>
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/hikkaduwa explore.jpg" alt="">
             </div>
             <div class="hikkaduwa-third-third-container">
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/hikkaduwa hotel.jpg" alt="">
                 <div>
                     <h2></h2>
                     <h3>An exquisite blend of captivating charm, contemporary elegance, and timeless classics awaits you at our exceptional selection of hotels and restaurants</h3>
@@ -153,7 +152,7 @@
                         </a>
                     </button>
                 </div>
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/hikkaduwa food.jpg" alt="">
             </div>
         </div>
     </section>
