--- a/kosgoda.html
+++ b/kosgoda.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Gallery</a></li>
                 <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
-                    <a href="#">Other</a>
+                    <a href="#">Other Hatcheries</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="bentota.html">Bentota</a></li>
@@ -47,7 +47,6 @@
             <div class="main-viewport-header-text">
                 <span>Explore</span>
                 <h2>Kosgoda</h2>
-                <h2>&#9730</h2>
                 <br>
             </div>
             <button class="scroll-btn" onclick="location.href='#kosgoda-first-id'">
@@ -65,9 +64,9 @@
             <p>Stretching for miles, the beach presents a picturesque setting where visitors can soak up the sun, stroll along the soft sands, and enjoy the gentle ocean breeze. The calm and inviting waters of the Indian Ocean make it an ideal spot for swimming, allowing visitors to cool off and enjoy a refreshing dip in the sea.</p>
         </div>
         <div class="kosgoda-first-image-container">
-            <img src="images/pollution2.jpg" alt="">
-            <img class="second-image" src="images/pollution2.jpg" alt="">
-            <img src="images/pollution2.jpg" alt="">
+            <img src="images/kosgoda 2.jpg" alt="">
+            <img class="second-image" src="images/kosgoda 5.jpg" alt="">
+            <img src="images/kosgoda 6.jpg" alt="">
         </div>
     </section>
 
@@ -84,16 +83,13 @@
             Hawksbill, and Leatherback turtles. These gentle giants face numerous threats, such as habitat destruction, pollution, and poaching. The dedicated team at Kosgoda works tirelessly to protect the turtles, provide a nurturing environment for nesting, and ensure the survival of hatchlings.</p>
         </div>
         <div class="kosgoda-second-first-image-container">
-            <img class="kosgoda-second-first-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="kosgoda-second-first-image-container-two" src="images/pollution2.jpg" alt="">
+            <img class="kosgoda-second-first-image-container-one" src="images/kosgoda 4.jpg" alt="">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.344567514129!2d80.01851387682565!3d6.349413393640473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22a32144e35a7%3A0xa093fe007929469a!2sKosgoda%20Turtle%20Conservation%20and%20Research%20Centre!5e0!3m2!1sen!2slk!4v1685247689958!5m2!1sen!2slk" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="kosgoda-second-second-image-container">
-            <img class="kosgoda-second-second-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="kosgoda-second-second-image-container-two" src="images/pollution2.jpg" alt="">
-        </div>
-        <div class="kosgoda-second-third-image-container">
-            <img class="kosgoda-second-third-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="kosgoda-second-third-image-container-two" src="images/pollution2.jpg" alt="">
+            <img class="kosgoda-second-second-image-container-one" src="images/kosgoda 1.jpg" alt="">
+            <img class="kosgoda-second-second-image-container-two" src="images/kosgoda 3.jpg" alt="">
         </div>
     </section>
 
@@ -116,10 +112,10 @@
                         </a>
                     </button>
                 </div>
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/galle.jpg" alt="">
             </div>
             <div class="kosgoda-third-second-item-container">
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/fish selling.jpg" alt="">
                 <div class="kosgoda-third-item-two">
                     <h4>Day Excursions to Galle Fort & Bentota from Colombo</h4>
                     <br>
@@ -155,10 +151,10 @@
                         </a>
                     </button>
                 </div>
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/yala.jpg" alt="">
             </div>
             <div class="kosgoda-third-fourth-item-container">
-                <img src="images/pollution2.jpg" alt="">
+                <img src="images/stilt fishermen.jpg" alt="">
                 <div class="kosgoda-third-item-four">
                     <h4>Trip with Stilt Fishermen</h4>
                     <br>
