--- a/threats.html
+++ b/threats.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Gallery</a></li>
                 <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
-                    <a href="#">Other</a>
+                    <a href="#">Other Hatcheries</a>
                     <ul class="nav-bar-items-2">
                         <li><a href="kosgoda.html">Kosgoda</a></li>
                         <li><a href="bentota.html">Bentota</a></li>
@@ -65,7 +65,7 @@
 
     <section class="threat-one-main">
         <div class="threat-one-container-one">
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/habitat loss.jpg" alt="">
             <div class="threat-one-description-one">
                 <h3>Habitat Loss and Degradation</h3>
                 <br>
@@ -87,13 +87,13 @@
                     <li>Conduct regular monitoring and research to identify and address emerging threats to sea turtle habitats</li>
                 </ul>
             </div>
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/habitat restore.jpg" alt="">
         </div>
     </section>
 
     <section class="threat-two-main">
         <div class="threat-two-container-one">
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/climate change.jpg" alt="">
             <div class="threat-two-description-one">
                 <h3>Climate Change</h3>
                 <br>
@@ -112,13 +112,13 @@
                     <li>Collaborate with international organizations and governments to develop global strategies for climate change mitigation and adaptation</li>
                 </ul>
             </div>
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/climate restore.jpg" alt="">
         </div>
     </section>
 
     <section class="threat-three-main">
         <div class="threat-three-container-one">
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/pollution2.jpg" alt="">
             <div class="threat-three-description-one">
                 <h3>Pollution</h3>
                 <br>
@@ -137,13 +137,13 @@
                     <li>Support research and development of innovative technologies for cleaning up marine pollution, such as ocean cleanup devices and waste-to-energy solutions</li>
                 </ul>
             </div>
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/pollution restore.jpg" alt="">
         </div>
     </section>
 
     <section class="threat-four-main">
         <div class="threat-four-container-one">
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/bycatch.jpg" alt="">
             <div class="threat-four-description-one">
                 <h3>Bycatching</h3>
                 <br>
@@ -163,13 +163,13 @@
                     <li>Enhance collaboration between fisheries management organizations, fishermen, and conservation groups to develop and implement effective bycatch reduction strategies</li>
                 </ul>
             </div>
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/bycatch restore.jpg" alt="">
         </div>
     </section>
 
     <section class="threat-five-main">
         <div class="threat-five-container-one">
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/poaching.jpg" alt="">
             <div class="threat-five-description-one">
                 <h3>Poaching</h3>
                 <br>
@@ -188,7 +188,7 @@
                     <li>Collaborate with international organizations and governments to strengthen regional cooperation and information sharing to combat transnational poaching networks</li>
                 </ul>
             </div>
-            <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+            <img src="images/poaching restore.jpg" alt="">
         </div>
     </section>
 
@@ -202,9 +202,9 @@
                 <li class="threat-outro-list-item"><a href="https://seasave.org/week-in-review/">Ocean Week In Review</a></li>
             </ul>
             <div class="threat-outro-tiles">
-                <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
-                <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
-                <img src="images/pexels-alain-margreve-13085872.jpg" alt="">
+                <img src="images/SWOT.jpg" alt="">
+                <img src="images/SWOT2.png" alt="">
+                <img src="images/SWOT3.jpg" alt="">
             </div>
         </div>
     </section>
