--- a/threats.html
+++ b/threats.html
@@ -23,7 +23,7 @@
                 <li><a id="nav-a" class="active" href="index.html">Home</a></li>
                 <li><a href="categories.html">Turtles</a></li>
                 <li><a href="threats.html">Threats</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="hikkaduwa.html">Hikkaduwa</a></li>
                 <li>
                     <a href="#">Other Hatcheries</a>
@@ -243,7 +243,7 @@
                             <h4>Turtles</h4>
                             <li><a href="categories.html">Categories</a></li>
                             <li><a href="threats.html">Threats</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
                         </ul>
                     </div>
     
