--- a/gallery.html
+++ b/gallery.html
@@ -36,51 +36,71 @@
             </ul>
         </nav>
     </header>
-    
-    <!-- <div class="main-viewport">
-        <div class="main-viewport-images">
-            <div>
-                <img class="main-viewport-image" src="images/bent2.jpg" alt="">
-            </div>
-        </div>
-        <div class="main-viewport-header">
-            <div class="main-viewport-header-text">
-                <span>Explore</span>
-                <h2>Bentota</h2>
-                <br>
-            </div>
-            <button class="scroll-btn" onclick="location.href='#bentota-first-id'">
-                <img src="icons/angle-down_teel.svg" alt="">
-            </button>
-        </div>
-    </div> -->
 
     <section class="gallery-main">
         <div class="gallery-main-container">
-            <div>
-                <img src="images/pollution2.jpg" alt="">
+            <div class="wide">
+                <img  src="thumbnails/zdenek-machacek-IgIdrCy0VxI-unsplash.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/Green Sea.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/hikkaduwa2.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/Leatherback.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/Loggerhead Turtle.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/Hawksbill Turtle.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/pexels-malinda-bandara-16508231.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/Olive Ridley.jpg" alt="">
             </div>
             <div>
-                <img src="images/Green Sea.jpg" alt="">
+                <img src="thumbnails/poaching restore.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/bentota3.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/kosgoda 3.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/habitat loss.jpg" alt="">
             </div>
             <div>
-                <img src="images/bycatch restore.jpg" alt="">
+                <img src="thumbnails/qwert.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/habitat restore.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/climate restore.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/kosgoda 4.jpg" alt="">
             </div>
             <div>
-                <img src="images/climate change.jpg" alt="">
+                <img src="thumbnails/turtle1.jpg" alt="">
             </div>
             <div>
-                <img src="images/david-troeger-9XzyEzPAHMI-unsplash.jpg" alt="">
+                <img src="thumbnails/pollution restore.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/david-troeger-9XzyEzPAHMI-unsplash.jpg" alt="">
             </div>
             <div>
-                <img src="images/Hawksbill Turtle.jpg" alt="">
-            </div>
-            <div>
-                <img src="images/kosgoda 2.jpg" alt="">
+                <img src="thumbnails/qwe.jpg" alt="">
             </div>
         </div>
     </section>
-
 
     <footer>
         <div class="footer-main">
