--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <!-- second main section -->
     <section class="second-section">
-        <div clas="second-section-container">
+        <div class="second-section-container">
             <h2>Sri Lankan Marine Turtles</h2>
             <hr>
             <p>Sri Lanka is home to five different species of sea turtles, all of which can be found in various locations along the
