--- a/categories.html
+++ b/categories.html
@@ -40,7 +40,8 @@
     <div class="main-viewport">
         <div class="main-viewport-images">
             <div>
-                <img class="main-viewport-image" src="images/zdenek-machacek-IgIdrCy0VxI-unsplash.jpg" alt=""></div>
+                <img class="main-viewport-image" src="images/zdenek-machacek-IgIdrCy0VxI-unsplash.jpg" alt="">
+            </div>
         </div>
         <div class="main-viewport-header">
             <div class="main-viewport-header-text">
