--- a/bentota.html
+++ b/bentota.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <link rel="icon" href="icons/turtleicon.ico" type="image/x-icon">
     <title>bentota</title>
 </head>
 <body>
