--- a/donate.html
+++ b/donate.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <link rel="icon" href="icons/turtleicon.ico" type="image/x-icon">
     <title>donate</title>
 </head>
 <body>
