--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="common.css">
 
+    <link rel="icon" href="icons/turtleicon.ico" type="image/x-icon">
     <title>turtletopia</title>
 </head>
 <body>
