--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             <div>
                 <p>The Sea Turtle Hatchery and Rescue Centre is located north of        Hikkaduwa, a few kilometers away from the town's main area. Its goal is to preserve endangered turtle species, and it is one among several hatcheries on the southern coast of the island. Initially launched as a community initiative to safeguard the region's biodiversity, it has developed into a complete hatchery and rescue center, where teams work tirelessly day and night to analyze, nurture and shield multiple species of turtles.</p><br>
                 
-                <p>It takes care of five different turtle species, namely Olive Ridley, Leatherback, Loggerhead, Hawksbill, and Green Turtles. The centre has modern facilities including water tanks to care for the newborn turtles and adult species that have been rescued due to injuries. Visitors can observe the unique sight of turtle egg-laying, with the eggs carefully placed in neat sand mounds. The centre closely monitors each of these mounds to track the hatching process of the turtle eggs.
-                </p>
+                <!-- <p>It takes care of five different turtle species, namely Olive Ridley, Leatherback, Loggerhead, Hawksbill, and Green Turtles. The centre has modern facilities including water tanks to care for the newborn turtles and adult species that have been rescued due to injuries. Visitors can observe the unique sight of turtle egg-laying, with the eggs carefully placed in neat sand mounds. The centre closely monitors each of these mounds to track the hatching process of the turtle eggs.
+                </p> -->
             </div>
         </div>
     </section>
